--- a/static/styles.css
+++ b/static/styles.css
@@ -17,5 +17,7 @@ div.container img {
   border-radius: 50%;  /* 角丸半径を50%にする(=円形にする) */
   width:  270px;       /* ※縦横を同値に */
   height: 270px;       /* ※縦横を同値に */
-  opacity: 0.75;
   }
+div.container img:hover {
+  opacity: 0.75;
+}
