--- a/static/styles.css
+++ b/static/styles.css
@@ -25,3 +25,23 @@ div.mon h1 {
   padding: 1rem 2rem;
   border: 6px double #000;
 }
+
+div.map h1 {
+  position: relative;
+  display: inline-block;
+  padding: 1rem 2rem 1rem 4rem;
+  color: #fff;
+  border-radius: 100vh 0 0 100vh;
+  background: #fa4141;
+}
+
+div .map h2:before {
+  position: absolute;
+  top: calc(50% - 7px);
+  left: 10px;
+  width: 14px;
+  height: 14px;
+  content: '';
+  border-radius: 50%;
+  background: #fff;
+}
